CssAnimations: animation events example completed

--- a/css/Using-CSS-Animations/multiple-animation-properties/index.html
+++ b/css/Using-CSS-Animations/multiple-animation-properties/index.html
@@ -10,10 +10,18 @@
         <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main-box">
-        <p class="slide-text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex commodi tenetur voluptatum et nesciunt expedita odio quasi maxime doloribus dolorem laborum, eum voluptatem sint minus! Omnis quia corporis unde, beatae minima autem officiis nostrum provident labore veniam odit expedita! Assumenda?
-        </p>
-    </div>
+    <section class="main-viewport">
+            <div class="box-1">
+                    <p class="slide-text">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex commodi tenetur voluptatum et nesciunt expedita odio quasi maxime doloribus dolorem laborum, eum voluptatem sint minus! Omnis quia corporis unde, beatae minima autem officiis nostrum provident labore veniam odit expedita! Assumenda?
+                    </p>
+                </div>
+            <div class="box-2">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum adipisci aliquam iusto hic ea doloribus sit quia nihil tempore nulla in asperiores dolores ipsum possimus, impedit tenetur. Harum aliquam obcaecati ea id. Nihil ullam culpa officiis est adipisci incidunt!
+                </p>
+            </div>
+    </section>
+    
 </body>
 </html>
