--- a/css/Dynamic-Styling/Transform_/index.html
+++ b/css/Dynamic-Styling/Transform_/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>CSS | Transform</title>
+    <title>CSS | Transform; change properties</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
