--- a/css/Dynamic-Styling/Translate_/index.html
+++ b/css/Dynamic-Styling/Translate_/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="main.css" />
-    <title>Translate</title>
+    <title>CSS | Translate; Move Content</title>
   </head>
   <body>
     <div>
